Fix and standardize HTML report tooltips
The HTML plugin currently uses three kinds of tooltips: a popover
created in Python code for the Info column, a popover created in
Javascript code for elements with the title attribute and a custom
tooltip added in d6f80ad08.

This commit unifies them using Bootstrap's built-in popovers,
which are created in Javascript code. Those popovers are only added
for cells that are visible (i.e. after a datatables redrawn) and
for those with truncated text, which should be slighly faster.
This should avoid the need to maintain a custom tooltip and keep
the code more consistent.

--- a/optional_plugins/html/avocado_result_html/templates/style.css
+++ b/optional_plugins/html/avocado_result_html/templates/style.css
@@ -1,23 +1,16 @@
-.spnTooltip {
-    display:none;
-    z-index: 10;
-    padding:14px 20px;
-    position:absolute;
-    color:#111;
-    border:1px solid #337ab7;
-    background:#fff;
-    white-space: pre-wrap;
-}
 .font-weight-normal {
     font-weight: normal;
 }
 /* Restrict cells to a maximum width */
 .dataTable th, .dataTable div {
-    max-width: 14.3em;
+    max-width: 10em;
     min-width: 5em;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+.popover-content {
+    word-break: break-all;
 }
 /* Basic metadata for svg */
 .icon {
